<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, NodeDroid!</string>
    <string name="app_name">Node Droid</string>
<string name="plan">Plan:</string>
<string name="quota">Quota:</string>
<string name="usage">Usage:</string>
<string name="rollover">Rollover:</string>
<string name="history">History:</string>
<string name="ipaddress">IP Address:</string>
<string name="avgusage">Avg:</string>
<string name="accountlist">Accounts</string>
<string name="addaccountbutton">Add Account</string>
<string name="username_editor">Username</string>
<string name="password_editor">Password</string>
<string name="userdialog_ok">Save</string>
<string name="userdialog_cancel">Cancel</string>
<string name="userdialog_delete">Delete</string>
<string name="accountrequired">An account must be added before this application can operate.</string>
<string name="accountrequired_ok">Add</string>
<string name="accountrequired_cancel">Quit</string>
<string name="userpasstitle">Account details</string>
<string name="accountsmenuitem">Accounts</string>
<string name="refreshmenuitem">Refresh</string>
<string name="settingsmenuitem">Settings</string>
<string name="historyYear">year</string>
<string name="historyMonth">month</string>
<string name="providerTxt">Provider</string>
<string name="data">Data</string>

<string name="status_new">New</string>
<string name="status_stale">Waiting</string>
<string name="status_ok">Ok</string>
<string name="status_failed">Auth Failed</string>
<string name="status_error">Error</string>

<string name="local_service_started">Service Started</string>
<string name="local_service_stopped">Service Stopped</string>
<string name="local_service_label">Service Label</string>
<string name="local_service_connected">Connected to fetch service</string>
<string name="local_service_disconnected">Disconnected from fetch service</string>

<string name="debug_preferences">Debug</string>
<string name="about_preferences">About</string>

<string name="extralogging_preference">Detailed Logging</string>
<string name="extralogging_preference_summary">Log HTTP, after removing passwords for security, to assist in diagnosing failure to parse. </string>
<string name="home_page">Home Page</string>
<string name="home_page_summary">View NodeDroid support homepage</string>
<string name="send_logs">Send logs to 8-bit cloud</string>
<string name="send_logs_summary">Email logs of network traffic and errors to 8-bit cloud for diagnosis</string>
<string name="browserscraper">Browser Scraper</string>
<string name="browserscraper_summary">Use an embedded browser to teach NodeDroid what your usage looks like</string>

<string name="create_widget">Save Widget Settings</string>

<string name="noaccounts">First Account Creation</string>
<string name="loadingservices">Loading services for your accounts. This usually is only shown when you are loading usage for the first time.  It should be replaced by your account in a few seconds.</string>
</resources>
