<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<FrameLayout android:paddingLeft="5px"
		android:paddingRight="5px" android:paddingBottom="5px"
		android:paddingTop="10px" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:text="" android:layout_width="fill_parent"
			android:id="@+id/serviceid" android:layout_height="wrap_content"
			android:textSize="10pt" 
			android:textColor="#FFF" android:paddingLeft="6px"
			android:paddingTop="24px" android:paddingRight="0px"
			android:paddingBottom="4px" android:textStyle="bold">
		</TextView>
		
		

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="right" android:orientation="vertical" android:padding="4px">
			
			<FrameLayout android:layout_width="43px" android:layout_height="43px">
				<ProgressBar style="?android:attr/progressBarStyleSmall"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:indeterminate="true" android:visibility="invisible"
					 android:id="@+id/progress" />
				<ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/pendingImage" android:background="@drawable/pending" android:visibility="invisible"/>
			</FrameLayout>
			<TextView android:layout_width="wrap_content" android:textColor="#7000" android:layout_height="wrap_content" android:id="@+id/lastUpdated"  android:textSize="4pt"/>
		</LinearLayout>


	</FrameLayout>



	<FrameLayout android:padding="5px" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:background="@drawable/content"
			android:orientation="vertical">

			<TableLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/TableLayout01"
				android:layout_toRightOf="@+id/planlabel" android:layout_above="@+id/plan">
				<TableRow>
					<TextView android:text="@string/plan" android:gravity="right"
						android:id="@+id/planlabel" android:textStyle="bold"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:padding="5px"></TextView>
					<TextView android:text="" android:id="@+id/plan"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				</TableRow>
				<TableRow>
					<TextView android:text="@string/rollover" android:gravity="right"
						android:id="@+id/rolloverlabel" android:textStyle="bold"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:padding="5px"></TextView>
					<TextView android:text="" android:id="@+id/rollover"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				</TableRow>

			</TableLayout>

			<ListView android:id="@+id/metricgrouplist" android:layout_width="fill_parent" android:layout_height="fill_parent">
			</ListView>

		</LinearLayout>
	</FrameLayout>






	<!-- Bottom Bit -->

	<FrameLayout android:padding="5px" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:background="@drawable/content"
			android:orientation="vertical">

			<TextView android:id="@+id/bottomheader" android:text="@string/data"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="10pt" android:textStyle="bold" android:gravity="center" />

			<TableLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/TableLayout01"
				android:layout_toRightOf="@+id/planlabel" android:layout_above="@+id/plan">

				<TableRow>
					<TextView android:text="@string/usage" android:gravity="right"
						android:id="@+id/usagelabel" android:textStyle="bold"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:padding="5px"></TextView>
					<TextView android:text="" android:id="@+id/usage"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				</TableRow>

				<TableRow>
					<TextView android:text="@string/avgusage" android:gravity="right"
						android:id="@+id/avgusagelabel" android:textStyle="bold"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:padding="5px"></TextView>
					<TextView android:text="" android:id="@+id/avgusage"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				</TableRow>


			</TableLayout>

			<com.eightbitcloud.internode.UsageGraphView
				android:id="@+id/graph" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1.0" />
		</LinearLayout>
	</FrameLayout>


</LinearLayout>




